--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "dependencies": {
     "auxiliary": "^0.1.1",
     "sequelize": "^5.21.3"
+  },
+  "devDependencies": {
+    "pg": "^7.17.0"
   }
 }
