--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generates swagger based on Sequelize models and your additional JSON Schema description",
   "main": "src/index.js",
   "scripts": {
-    "test": "node test/index.js"
+    "test": "mocha test/sequelize/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "sequelize": "^5.21.3"
   },
   "devDependencies": {
+    "mocha": "^6.2.2",
     "pg": "^7.17.0"
   }
 }
