--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
   - postgresql
 addons:
   postgresql: '10'
+  postgresql-client: '10'
 before_script:
   psql -c "create user sequelize_swagger_test with password 'sequelize_swagger_test';" -c postgres
   psql -c "create database sequelize_swagger_test owner sequelize_swagger_test;" -c postgres
