--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
+dist: trusty
 language: node_js
 node_js:
   - 7
   - 12
 services:
   - postgresql
-os:
-  - linux
 install:
-  apt install postgresql postgresql-client
-  psql -c "create user sequelize_swagger_test with password 'sequelize_swagger_test';" -c postgres
+  apt install postgresql postgresql-client -y &&
+  psql -c "create user sequelize_swagger_test with password 'sequelize_swagger_test';" -c postgres &&
   psql -c "create database sequelize_swagger_test owner sequelize_swagger_test;" -c postgres
 env:
   - DB_NAME=sequelize_swagger_test
