--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ node_js:
 services:
   - postgresql
 install:
-  psql -c "create user sequelize_swagger_test with password 'sequelize_swagger_test';" -c postgres &&
-  psql -c "create database sequelize_swagger_test owner sequelize_swagger_test;" -c postgres
+  psql -c "create user sequelize_swagger_test with password 'sequelize_swagger_test';" -U postgres &&
+  psql -c "create database sequelize_swagger_test owner sequelize_swagger_test;" -U postgres
 env:
-  - DB_NAME=sequelize_swagger_test
-  - DB_USER=sequelize_swagger_test
-  - DB_PASSWORD=sequelize_swagger_test
+  global:
+    - DB_USER=sequelize_swagger_test
+    - DB_PASSWORD=sequelize_swagger_test
+    - DB_NAME=sequelize_swagger_test
