--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ services:
   - postgresql
 install:
   psql -c "create user sequelize_swagger_test with password 'sequelize_swagger_test';" -U postgres &&
-  psql -c "create database sequelize_swagger_test owner sequelize_swagger_test;" -U postgres
+  psql -c "create database sequelize_swagger_test owner sequelize_swagger_test;" -U postgres &&
+  pwd && ls &&
+  npm install
 env:
   global:
     - DB_USER=sequelize_swagger_test
